--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,4 +3,6 @@
 ---
 fixtures:
   forge_modules:
-#     stdlib: "puppetlabs/stdlib"
+    vcsrepo:
+      repo: puppetlabs-vcsrepo
+      version: "7.0.0"
